# rust-aoc-2023

./: .gitignore  Cargo.toml  README.md  justfile
day-01/: Cargo.toml
day-01/src/: part1.rs  part2.rs
day-02/: Cargo.toml
day-02/src/: part1.rs  part2.rs
day-03/: Cargo.toml
day-03/src/: part1.rs  part2.rs
day-04/: Cargo.toml
day-04/src/: part1.rs  part2.rs
day-05/: Cargo.toml
day-05/src/: part1.rs  part2.rs
day-06/: Cargo.toml
day-06/src/: part1.rs  part2.rs
day-07/: Cargo.toml
day-07/src/: part1.rs  part2.rs
day-08/: Cargo.toml
day-08/src/: part1.rs  part2.rs
template/: Cargo.toml  cargo-generate.toml
template/src/: part2.rs
